# GraphColor

./: .gitignore  BreadthFirst.cpp  BreadthFirst.h  CMakeLists.txt  Filter.cpp  Filter.h  Graph.cpp  README.md  depthFirst.c  depthFirst.h  main.cpp  mystack.c  programTest
BA_GraphFormat/: io_bagraph.cpp  io_bagraph.h
Colouriser/: Colouriser.cpp  Colouriser.hpp
GlucoseMiniSat/: CMakeLists.txt
GlucoseMiniSat/core/: BoundedQueue.h  Dimacs.h  Solver.cc  Solver.h  Solver.or  SolverStats.h  SolverTypes.h
GlucoseMiniSat/mtl/: Alloc.h  Heap.h  Map.h  Queue.h  Sort.h  Vec.h  VecThreads.h
GlucoseMiniSat/parallel/: ClausesBuffer.cc  ClausesBuffer.or  Main.or  MultiSolvers.cc  MultiSolvers.h  MultiSolvers.or  ParallelSolver.cc  ParallelSolver.h  ParallelSolver.or  SharedCompanion.cc  SharedCompanion.h  SharedCompanion.or  SolverCompanion.cc  SolverCompanion.h  SolverCompanion.or  SolverConfiguration.cc  SolverConfiguration.or  depend.mk  glucose-syrup_static
GlucoseMiniSat/simp/: Main.cc  SimpSolver.cc  SimpSolver.h  SimpSolver.or  depend.mk  glucose
GlucoseMiniSat/utils/: Options.cc  Options.h  Options.or  System.cc  System.h  System.or
GraphInput/: GraphFoster.txt  graph1.txt  graph3.txt  graph4.txt  graph5.txt  graphG6.txt  graph_1049_doubleStar.txt  graph_1104_GoldbergSnark3.txt  graph_1108_snark56Vert.g6  graph_1217_22vert.mat  graph_20vert.txt  graph_28_coxeter.txt  graph_6700_snakr_adjMatrix.txt  graph_6700_snark_18vert.g6  graph_951_noSnark_112vert.g6  graph_998_14vert_random.g6  graph_flowerSnarkJ5_20vert.mat  output  showg
SATtests/: console.txt  input.cnf
include/: BreadthFirst.h  Graph.h  OldGraph.h  mystack.h
src/: BFS_colouring.cpp  BFS_colouring.h  BreadthFirst.cpp  Edge.cpp  Edge.h  Filter.cpp  Graph.cpp  Graph.h  GraphFunctions.cpp  GraphFunctions.h  GraphNew.cpp  GraphNew.h  OldGraph.cpp  SATSolver.cpp  SATSolver.h  Simple_Graph.cpp  Simple_Graph.h  Vertex.cpp  Vertex.h  depthFirst.c  mystack.c
